# nn-zero-to-hero

./: .gitignore  README.md  pyproject.toml
gpt/: README.md  bigram.py  build_gpt.ipynb  tokenizer.ipynb  v2.py
hf-finetune/: demo.ipynb  pyproject.toml
hf-intro/: demo.ipynb  demo.py  main.py  pipeline.ipynb  pyproject.toml  tokenizer.ipynb
makemore/: makemore_part2.ipynb.ipynb  makemore_part3.ipynb
makemore/.ipynb_checkpoints/: makemore_part1.ipynb-checkpoint.ipynb  makemore_part2.ipynb-checkpoint.ipynb
micrograd/: 1.ipynb
peft-lora/: README.md  d.ipynb  pyproject.toml  qlora.ipynb
