[project]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "ipykernel>=6.29.5,<7",
    "tiktoken>=0.13.0",
    "torch>=2.11.0",
    "transformers>=5.12.1",
]

[tool.uv.workspace]
members = [
    "hf-intro",
    "hf-finetune",
    "peft-lora",
]

# This WSL has an RTX 5080 (Blackwell) with working CUDA — same as the d2l env,
# which runs torch 2.11.0+cu128. Pin torch to the CUDA 12.8 wheel index so we get
# a GPU build. Do NOT use the default PyPI wheel: it pulls cu13/cudnn that fails
# to load here (libcudnn.so.9: cannot open shared object file).
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
